assets/scss/_styles_project.scss
@import "fonts_project.scss";
@import "content_project.scss";
@import "image-modal_project.scss";
@import "elements_project.scss";
@import "footer_project.scss";
@import "variables_project.scss";
@import "landing_project.scss";
@import "_navbar_project.scss";
@import "tax_project.scss";
@import "search_project.scss";
@import "_videos_project.scss";
@import "subscription.scss";
@import "rest-api-reference.scss";
@import "_video-landing_project.scss";
@import "elements_project";
@import "summary.scss";
@import "_kanvas-corner-popup.scss";

.navbar-dark {
  min-height: 5rem;
  padding: 0 5rem;
  border-bottom: 1px solid #333;
  background-color: $dark !important;

  .dropdown-menu {
    background-color: $dark;
    box-shadow: 0px 4px 20px 0px rgba(0, 211, 169, 0.2);

    .dropdown-item {
      color: $white;

      &:hover {
        background: $primary;
      }
    }

    .dropdown-divider {
      margin: 0;
      border-top: 1px solid $primary;
    }
  }
}

.nav-link.active {
  border-width: 1px;
  border-style: solid;
  border-image: linear-gradient(to bottom,
      rgba($dark, 0.2) 30%,
      rgba($primary, 0.3) 60%,
      $primary 90% 100%) 1;
  padding-bottom: 0.3rem;
  align-items: center;
  justify-content: center;
  align-self: center;
  display: flex;
  align-content: center;
  padding: auto;
  margin: auto;
  // background-color: linear-gradient(to right, rgba($dark,.2) 30%, rgba($primary,.3) 60%, $primary 90% 100%) 1;
}

// Page Layout Sections
.td-home {
  background-color: $dark;
  overflow-x: hidden;
}

// .td-cover-block--height-full {
//   min-height: 90vh;

// }

//main sections
.td-outer {
  margin-top: 3rem;
}

.td-main main {
  @include media-breakpoint-up(md) {
    padding-top: 4rem;
    padding-left: 1rem;
    padding-right: 1rem;
  }
}

body {
  overflow-x: hidden;
}

// Main Middle Body
.td-content {
  h2 {
    color: $casper;
  }

  // Inline code
  p code,
  li>code,
  table code {
    color: inherit;
    padding: 0.2em 0.4em;
    margin: 0;
    font-size: 85%;
    word-break: normal;
    background-color: rgba($black, 0.05);
    border-radius: $border-radius;

    br {
      display: none;
    }
  }

  // Code blocks
  pre {
    word-wrap: normal;
    background-color: $gray-900;
    padding: $spacer;

    >code {
      background-color: inherit !important;
      padding: 0;
      margin: 0;
      font-size: 100%;
      word-break: normal;
      white-space: pre;
      border: 0;
    }
  }

  img,
  .md__image img,
  img.md-image-responsive {
    display: block;
    width: auto;
    max-width: clamp(320px, 100%, 700px);
    height: auto;
    margin: 0 auto;
    object-fit: contain;
    box-sizing: border-box;
  }

  overflow-x: hidden;
}
.td-content .card img {
  width: 100% ;
}

// Links

a {
  color: $primary;
  text-decoration: none;
}

a:hover {
  color: $white;
}

a:not([href]):not([class]),
a:not([href]):not([class]):hover {
  color: inherit;
  text-decoration: none;
}

// Taxonomy
.article-meta-bg {
  background-color: $gray-900;
  padding: 0.5rem;
  padding-left: 1rem;
}

.taxonomy {
  // .taxonomy-terms-cloud

  .taxonomy-term {

    border-width: 0;
    border-radius: 0 3px 3px 0;
    display: inline-block;
    font-size: 1em;
    line-height: 1.5em;
    min-height: 1.5em;
    max-width: 100%;
    padding: 0 0.5em 0 1em;
    position: relative;
    margin: 0 0.5em 0.2em 0;
    text-decoration: none;
    transition: color 0.2s;
    clip-path: polygon(100% 0, 100% 100%, 0.8em 100%, 0 50%, 0.8em 0);


    &:hover {
      background-color: $primary;
      color: $white;

    }

  }

  .article-teaser {
    &.card {
      padding: 1em;
      margin-bottom: 1.5em;
      background-color: $dark;
    }

    .breadcrumb {
      margin-bottom: 0em;
      font-size: 0.85rem;
    }

    .article-meta-bg {
      margin-bottom: 0em;
    }
  }
}

// Footer
.td-footer {
  background-color: $black;
  // bottom: 0%;
  z-index: 5;
}

.td-sidebar {
  background-image: linear-gradient(to top,
      #1e2117,
      #1d1912,
      #18120e,
      #0f0a09,
      #000000);
  position: sticky;
  height: calc(100vh - 5.5rem);
  top: 5.5rem;
  overflow-y: auto;
  padding-top: 1rem;
  margin-top: 0;
  overflow-x: hidden;
  &__inner {
    @include media-breakpoint-up(md) {
      @supports (position: sticky) {
        position: static;
      }
    }
  }
}

.td-sidebar #td-sidebar-menu,
.td-sidebar .td-sidebar__search {
  padding-top: 0;
  margin-top: 0;
}

@media screen and (max-width: 768px) {
  .td-sidebar {
    position: relative;
    height: auto;
    top: 0;
    padding-top: 0;
  }
}
/* ... */

